--- a/docs/M1.0.5_ORDER_TRACKING_FINAL_QA_GUIDE.md
+++ b/docs/M1.0.5_ORDER_TRACKING_FINAL_QA_GUIDE.md
@@ -91,7 +91,7 @@
       "statusId": 3,
       "statusName": "Out for Delivery",
       "timestamp": "2026-01-15T12:30:00Z",
-      "note": "Driver Mohammed Ali is on the way"
+      "note": "Driver Mohammed Ali is In Progress"
     }
   ],
   
