search with 2 languages and continue translate

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -123,7 +123,7 @@
   "ifDidntReceiveCode": "إذا لم تستلم رمز التحقق،",
   "resend": "إعادة الإرسال",
   "send": "إرسال",
-  "products": "النتجات",
+  "products": "المنتجات",
   "stores": "المتاجر",
   "thisFieldIsRequired": "هذا الحقل مطلوب",
   "qatar8DigitPhone": "رقم هاتف قطري مكون من 8 أرقام",
