solve bug of you 've added quantity item

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -65,7 +65,7 @@
   "cancel": "إلغاء",
   "remove": "حذف",
 
-  "addedToCart": "لقد أضفت عنصراً واحداً",
+  "addedToCart": "لقد أضفت {quantity} عنصر",
   "selectedItemNotConfirmed": "لقد اخترت عنصراً واحداً، لكنك لم تؤكد اختيارك بعد",
   "addToCart": "أضف إلى السلة",
   "continueShopping": "متابعة التسوق",
@@ -294,6 +294,8 @@
   "start": "بدء",
   "deliveryStartedSuccessfully": "تم بدء التوصيل بنجاح",
   "failedToStartDelivery": "فشل في بدء التوصيل: ",
+  "orderMustBeConfirmedToStart": "يجب تأكيد الطلب قبل بدء التوصيل",
+  "orderNotAssignedToYou": "هذا الطلب غير مسند لك",
   "orderCancelledSuccessfully": "تم إلغاء الطلب بنجاح",
   "failedToCancelOrder": "فشل في إلغاء الطلب: ",
   "order": "طلب",
@@ -444,6 +446,7 @@
   "security": "الأمن",
   "areYouSureLogout": "هل أنت متأكد من تسجيل الخروج؟",
   "transactionHistory": "سجل المعاملات",
+  "orderHistory": "سجل الطلبات",
   "from": "من",
   "to": "إلي",
   "noTransactionsFound":"لم يتم العثور على معاملات",
