--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,7 +65,7 @@
   "cancel": "Cancel",
   "remove": "Delete",
 
-  "addedToCart": "You've added 1 item",
+  "addedToCart": "You've added {quantity} item",
   "selectedItemNotConfirmed": "You selected 1 item, but you haven't confirmed your choice yet",
   "addToCart": "Add To Cart",
   "continueShopping": "Continue Shopping",
@@ -297,6 +297,8 @@
   "cancel": "Cancel",
   "start": "Start",
   "failedToStartDelivery": "Failed to start delivery: ",
+  "orderMustBeConfirmedToStart": "Order must be confirmed before starting delivery",
+  "orderNotAssignedToYou": "This order is not assigned to you",
   "order": "Order",
   "orderSummary": "Order Summary",
   "orderDetails": "Order Details",
@@ -446,6 +448,7 @@
   "security": "Security",
   "areYouSureLogout": "Are you sure you want to log out?",
   "transactionHistory": "Transaction History",
+  "orderHistory": "Order History",
   "from": "From",
   "to": "To",
   "noTransactionsFound": "No Transactions Found",
