solve name of purchase bundle - get proucts with isbundle=true but not reload home screen

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -124,6 +124,8 @@
   "resend": "إعادة الإرسال",
   "send": "إرسال",
   "products": "المنتجات",
+  "allProducts": "جميع المنتجات",
+  "allBundles": "جميع الحزم",
   "stores": "المتاجر",
   "thisFieldIsRequired": "هذا الحقل مطلوب",
   "qatar8DigitPhone": "رقم هاتف قطري مكون من 8 أرقام",
