--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -123,9 +123,9 @@
   "ifDidntReceiveCode": "If you didn't receive a code,",
   "resend": "Resend",
   "send": "Send",
-  "products": "Products", 
-  "stores": "Stores",
   "products": "Products",
+  "allProducts": "All Products",
+  "allBundles": "All Bundles",
   "stores": "Stores",
   "purchasedOn": "Purchased On",
   "totalOrderValue": "Total Order Value",
