load more in all products screen

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -126,6 +126,7 @@
   "products": "المنتجات",
   "allProducts": "جميع المنتجات",
   "allBundles": "جميع الحزم",
+  "loadMore": "تحميل المزيد",
   "stores": "المتاجر",
   "thisFieldIsRequired": "هذا الحقل مطلوب",
   "qatar8DigitPhone": "رقم هاتف قطري مكون من 8 أرقام",
