--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -126,6 +126,7 @@
   "products": "Products",
   "allProducts": "All Products",
   "allBundles": "All Bundles",
+  "loadMore": "Load More",
   "stores": "Stores",
   "purchasedOn": "Purchased On",
   "totalOrderValue": "Total Order Value",
